--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
-    "axios": "^0.19.0",
-    "nprogress": "^0.2.0"
+    "tinybar": "^0.0.2"
   },
   "devDependencies": {
     "eslint": "^6.1.0",
